src/objects/divisionOrder__c.object
<CustomObject>
    <fields>
        <fullName>account__c</fullName>
        <formula>case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Division Orders</relationshipLabel>
        <relationshipName>Division_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dateConfirmed__c</fullName>
        <label>Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateReceivedFromOperator__c</fullName>
        <label>Date Received from Operator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateReturnedToOperator__c</fullName>
        <label>Date Returned to Operator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Division Orders</relationshipLabel>
        <relationshipName>Division_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sharedDrivePath__c</fullName>
        <label>Shared Drive Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>In Dispute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Division Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>account__c</columns>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>priority__c</columns>
        <columns>operator__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>case__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRT_Division_Orders_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Reynolds</value>
        </filters>
        <label>CRT - Division Orders Confirmed</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>Division Orders Confirmed</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_Confirmed_Not_Returned</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>operator__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>status__c</columns>
        <columns>priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dateReturnedToOperator__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>dateConfirmed__c</field>
            <operation>greaterThan</operation>
            <value>1/1/1900</value>
        </filters>
        <label>Division Orders Confirmed Not Returned</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Division Orders In Progress</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_Missing_Shared_File_Path</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>sharedDrivePath__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sharedDrivePath__c</field>
            <operation>equals</operation>
        </filters>
        <label>Division Orders Missing Shared File Path</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_Not_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>operator__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>status__c</columns>
        <columns>priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,In Dispute</value>
        </filters>
        <label>Division Orders Not Confirmed</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_Not_Returned</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>operator__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>status__c</columns>
        <columns>priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dateReturnedToOperator__c</field>
            <operation>equals</operation>
        </filters>
        <label>Division Orders Not Returned</label>
    </listViews>
    <listViews>
        <fullName>Division_Orders_Not_Started</fullName>
        <columns>NAME</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>sharedDrivePath__c</columns>
        <columns>priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Division Orders Not Started</label>
    </listViews>
    <listViews>
        <fullName>High_Priority_Division_Orders</fullName>
        <columns>NAME</columns>
        <columns>operator__c</columns>
        <columns>case__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>priority__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,In Dispute</value>
        </filters>
        <label>High Priority Division Orders</label>
    </listViews>
    <listViews>
        <fullName>JHK_Division_Orders_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Jason</value>
        </filters>
        <label>JHK - Division Orders Confirmed</label>
    </listViews>
    <listViews>
        <fullName>JHK_Outstanding_Division_Orders</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>case__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>operator__c</columns>
        <columns>priority__c</columns>
        <columns>status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Jason</value>
        </filters>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,In Dispute</value>
        </filters>
        <label>JHK - Outstanding Division Orders</label>
    </listViews>
    <listViews>
        <fullName>Low_Priority_Division_Orders</fullName>
        <columns>NAME</columns>
        <columns>operator__c</columns>
        <columns>case__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>priority__c</field>
            <operation>equals</operation>
            <value>Low</value>
        </filters>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,In Dispute</value>
        </filters>
        <label>Low Priority Division Orders</label>
    </listViews>
    <listViews>
        <fullName>Medium_Priority_Division_Orders</fullName>
        <columns>NAME</columns>
        <columns>operator__c</columns>
        <columns>case__c</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>priority__c</field>
            <operation>equals</operation>
            <value>Medium</value>
        </filters>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,In Dispute</value>
        </filters>
        <label>Medium Priority Division Orders</label>
    </listViews>
    <listViews>
        <fullName>PAV_Division_Orders_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>dateReceivedFromOperator__c</columns>
        <columns>dateConfirmed__c</columns>
        <columns>dateReturnedToOperator__c</columns>
        <columns>status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Paul</value>
        </filters>
        <label>PAV - Division Orders Confirmed</label>
    </listViews>
    <nameField>
        <displayFormat>DO-{000000}</displayFormat>
        <label>Division Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Division Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>